# xork

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
assets/items/: goblin-club.item.ron
assets/mobs/: goblin.mob.ron
assets/zones/starter-town/: gate.zone.ron  gaurd-station.zone.ron  guard-station.zone.ron
assets/zones/starter-woods/: 01.zone.ron  02.zone.ron  03.zone.ron
src/: handle_exit_command.rs  handle_game_cmd.rs  handle_player_look.rs  handle_player_move.rs  handle_slash_cmd.rs  items.rs  lib.rs  player_take.rs  state.rs  zones.rs
src/commands/: commands.rs  mod.rs
src/menu_screens/: main_game.rs  mod.rs
src/menu_screens/inventory/: all.rs  mod.rs
src/messages/: mod.rs  mod.rs.bak
src/messages/client/: mod.rs
src/messages/server/: mod.rs
src/mobs/: mod.rs
src/tui/: chat_widget.rs  mod.rs
src/ui/: mod.rs  update.rs
