[package]
name = "xork"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
anyhow = "1.0.102"
# bevy = { version = "0.15.3", default-features = false, features = ["bevy_asset", "bevy_audio", "bevy_state", "dynamic_linking", "multi_threaded", "serialize"] }
bevy = { version = "0.18", features = ["bevy_asset", "bevy_audio", "bevy_state", "dynamic_linking", "multi_threaded", "serialize"] }
# bevy-steamworks = { version = "0.12.0", features = ["serde"] }
bevy_common_assets = { version = "0.15.0", features = ["ron", "toml"] }
bevy_simple_text_input = "0.14.1"
# bevy_iced = { git = "https://github.com/Azorlogh/bevy_iced", version = "0.5.0" }
# bevy_renet = "1.0.0"
bincode = "1.3.3"
# chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
fxhash = "0.2.1"
# local-ip-address = "0.6.3"
# ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
# rm with ratatui
# tui-input = "0.11.1"
